@@ -133,8 +133,8 @@ class TestConversion(TestCaseWithSubversionRepository):
         self.assertFalse(os.path.exists("e/branches/anotherbranch"))
 
     def test_shared_import_continue(self):
-        BzrDir.create_repository("e", shared=True, 
-                format=get_rich_root_format())
+        dir = BzrDir.create("e", format=get_rich_root_format())
+        dir.create_repository(shared=True)
 
         convert_repository(Repository.open("svn+"+self.repos_url), "e", 
                 TrunkBranchingScheme(), True)
@@ -160,14 +160,15 @@ class TestConversion(TestCaseWithSubversionRepository):
                 TrunkBranchingScheme(), working_trees=True)
 
     def test_shared_import_nonescheme_empty(self):
-        BzrDir.create_repository("e", shared=True, format=get_rich_root_format())
+        dir = BzrDir.create("e", format=get_rich_root_format())
+        dir.create_repository(shared=True)
 
         convert_repository(Repository.open("svn+"+self.repos_url), "e", 
                 NoBranchingScheme(), True)
 
     def test_shared_import_with_wt(self):
-        BzrDir.create_repository("e", shared=True, 
-                format=get_rich_root_format())
+        dir = BzrDir.create("e", format=get_rich_root_format())
+        dir.create_repository(shared=True)
 
         convert_repository(Repository.open("svn+"+self.repos_url), "e", 
                 TrunkBranchingScheme(), True, True)
@@ -176,8 +177,8 @@ class TestConversion(TestCaseWithSubversionRepository):
                         self.test_dir, "e", "trunk", "file")))
 
     def test_shared_import_without_wt(self):
-        BzrDir.create_repository("e", shared=True, 
-                format=get_rich_root_format())
+        dir = BzrDir.create("e", format=get_rich_root_format())
+        dir.create_repository(shared=True)
 
         convert_repository(Repository.open("svn+"+self.repos_url), "e", 
                 TrunkBranchingScheme(), True, False)
@@ -186,8 +187,8 @@ class TestConversion(TestCaseWithSubversionRepository):
                         self.test_dir, "e", "trunk", "file")))
 
     def test_shared_import_old_repos_fails(self):
-        BzrDir.create_repository("e", shared=True, 
-                format=format_registry.make_bzrdir('knit'))
+        dir = BzrDir.create("e", format=format_registry.make_bzrdir('knit'))
+        dir.create_repository(shared=True)
 
         self.assertRaises(IncompatibleRepositories, 
             lambda: convert_repository(Repository.open(self.repos_url), "e", 
